--- a/day01/useScript.html
+++ b/day01/useScript.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>script标签的使用位置</title>
 		
-		<!-- 4、将JavaScript文件放在head标签使用 -->
-		<script src = './js/test03.js'></script>
+		<!-- 4、将JavaScript文件放在head标签使用,使用defer属性推迟执行脚本 -->
+		<script defer src = './js/test03.js'></script>
 	</head>
 	<body>
 		<p>hello world!</p>
