--- a/day02/value.html
+++ b/day02/value.html
@@ -7,12 +7,14 @@
 	<body>
 		<h1>原始值</h1>
 		<p>
-			简单数据，包括Undefined、Null、Boolean、Number、String、Symbol。保存原始值的变量按值访问，操作的是数据。
+			简单数据，包括Undefined、Null、Boolean、Number、String、Symbol。保存原始值的变量按值访问，操作的是数据。<br>
+			原始值保存在栈内存中。
 		</p>
 		<h1>引用值</h1>
 		<p>
-			保存于内存中的对象，由多个值构成，保存引用值的变量按引用访问，操作的是该对象的引用，不能直接操作内存空间。<br>
-			引用值可随时添加、修改、删除属性和方法。
+			保存于内存中的对象，由多个值构成，保存引用值的变量按引用访问，操作的是该对象的引用、指针，不能直接操作内存空间。<br>
+			引用值可随时添加、修改、删除属性和方法。<br>
+			引用值是对象，保存在堆内存中。
 		</p>
 		
 		<script type="text/javascript">
