--- a/day04/explicit.html
+++ b/day04/explicit.html
@@ -42,7 +42,7 @@
 			</tr>
 			<tr>
 				<td>Number</td>
-				<td>非0数值、无穷Infinity</td>
+				<td>非0数值(包括负数)、无穷Infinity</td>
 				<td>0、NaN</td>
 			</tr>
 			<tr>
